--- a/notebook-main.ipynb
+++ b/notebook-main.ipynb
@@ -108,7 +108,7 @@
    "id": "79ea9f0c",
    "metadata": {},
    "source": [
-    "function to calc the distence betweeen 2 coreds"
+    "The function draws a circle around a detected star."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "id": "12b4ef9f",
    "metadata": {},
    "source": [
-    "using the 2 function above to find the best natchs and return it"
+    " This function displays the matches by coloring a green circle around the star and showing its ID."
    ]
   },
   {
